[package]
name = "rustem"
version = "0.1.0"
edition = "2018"
authors = ["Triet Trinh <contact@trinhminhtriet.com>"]
keywords = [ "system", "info", "monitoring", "statistics" ]
description = "A lightweight Rust library for system monitoring, providing CPU, memory, disk, and network statistics."
license = "MIT"
readme = "README.md"
homepage = "https://trinhminhtriet.com"
repository = "https://github.com/trinhminhtriet/rustem"

[dependencies]
time = "0.3.9"
lazy_static = "1.0"
bytesize = "1.1"
libc = "0.2"
the_serde = { package = "serde", version = "1.0", features = ["derive"], optional = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
nom = "7.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["fileapi", "sysinfoapi", "minwindef", "winbase", "winerror", "ws2def", "ws2ipdef", "pdh"]

[package.metadata.docs.rs]
targets = [
	"x86_64-unknown-freebsd",
	"x86_64-unknown-openbsd",
	"x86_64-unknown-netbsd",
	"x86_64-unknown-linux-gnu",
	"x86_64-apple-darwin",
	"x86_64-pc-windows-msvc"
]

[features]
serde = ["the_serde", "bytesize/serde", "time/serde"]
